--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/mobile.css">
   <link rel="stylesheet" media="screen and (min-width: 1100px)" href="./css/widescreen.css">
+  <link rel="shortcut icon" href="./img/logo.PNG" type="image/png">
   <script src="https://kit.fontawesome.com/e8a97f7b71.js" crossorigin="anonymous"></script>
   <title>Girubuntu blog | About us</title>
 </head>
