--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,10 @@
                 <textarea name="message" id="message"></textarea>
             </div>
             <div class="form-group">
-              <input type="myfile" name="myfile" id="myfile" placeholder="Upload File">
+              <input type="file" id="myfile" placeholder="Upload File">
           </div>
           <div class="form-group">
-            <div>
-              data-netlify-recaptcha="true"
+            <div data-netlify-recaptcha="true"></div>
             </div>
           </div>
             <input type="submit" value="Send" class="btn btn-dark">
