handling netlify issue

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
     <div class="contact-form bg-primary">
    
     <div id="contact-content"> 
-        <form id="form-content" action="POST" data-netlify="true">
+        <form id="form-content" name="form" action="post" data-netlify="true">
           <h2 class="m-heading"><span class="text-secondary">Contact</span> us</h2>
           <p>Fill the form to Contact us</p>
             <div class="form-group">
@@ -45,15 +45,15 @@
                 <input type="text" name="name" id="name" placeholder="enter your name">
             </div>
             <div class="form-group">
-                 <label for="name">Email</label>
+                 <label for="email">Email</label>
                  <input type="email" name="email" id="email" placeholder="enter your email">
             </div>
             <div class="form-group">
-                <label for="name">Phone number</label>
+                <label for="phone">Phone number</label>
                 <input type="number" name="number" id="number" placeholder="enter your number">
             </div>
             <div class="form-group">
-                <label for="name">Message</label>
+                <label for="message">Message</label>
                 <textarea name="message" id="message"></textarea>
             </div>
             <input type="submit" value="Send" class="btn btn-dark">
