--- a/product.html
+++ b/product.html
@@ -33,7 +33,7 @@
   </div>
 </nav>
 <!-- product section -->
-  <section id="product" class="bg-light">
+  <main id="product" class="bg-light">
         <div class="productContainer">
           <div class="m-heading text-center py-1" id="productIntro">
             <h2 ><span class="text-custom">Products & Services</span></h2>
@@ -91,7 +91,7 @@
               </div>
             </div>
             
-    </section>
+          </main>
     <!-- footer -->
     <footer id="main-footer" class="bg-dark text-center">
       <p>copyright &copy; 2021, Girubuntu blog and resume, All Rights reserved</p>
